_sass/index.scss
/* ... */
@media screen and (max-width: $breakpoint-small) {
  body {
    font-size: .9em;
  }

  .arrow-up {
    bottom: 330px;
  }
  .logo-upper-left {
    @include mobile-logo;
    position: absolute;
    top: 18px;
    left: 14px;
    width: 46%;
    height: auto;
    z-index: 2;
  }

  .review img {
    display: block;
  }

  .review p {
    display: inline-block;
    height: 100%;
  }

  .review-carousel {
    .slick-track {
      height: 375px;
    }
  }

  .nav-modal {
    .inner {
      .menu-close {
        padding: 21px;
      }
    }
  }

  .modal-open {
    display: none;
    height: 0;
  }

  .contact-info-body {
    font-size: .9em;
    margin-top: 12px;
    width: 100%;
    .contact-row {
      padding-left: 0;
      margin: 0 auto;
      width: 80%;
      > div {
        width: 100%;
        margin-bottom: 8px;
        > img {
          float: left;
          margin-top: -12px;
          margin-bottom: 8px;
        }
        > span {
          margin-top: 10px;
        }
      }
    }
  }
  .navigation-arrow-right {
    right: 5%;
  }

  #header-text {
    font-size: 1.2em;
  }
  .navigation-arrow-left {
    left: 5%;
  }
  .contact-row {
    > {
      width: 100%;
    }
  }

  .services-header {
    margin-top: 0;
    padding-top: 12px;
    padding-left: 21px;
  }
  .ham-menu {
    display: block !important;
    padding: 1.5em;
    background-size: 1.5em;
  }

  #top-nav {
    display: none !important;
  }
  .nav-modal {
    .inner {
      .modal-logo {
        @include mobile-logo;
      }
      ul.nav {
        margin-top: 42px;
      }
    }
  }

  .slick-dots {
    margin-top: 0;
    > li {
      width: 10px;
      height: 10px;
    }
  }

  .review-slideshow {
    .review {
      display: flex;
      align-items: center;
    }
    .review::before {
      display: none;
    }
    padding: 28px 12px;
    .inner {
      img {
        margin-top: 3px;;
        max-width: 35%;
      }
      p {
        width: 100%;
        max-width: 100%;
        text-align: center;
        padding: 0;
      }
    }
  }

  .desktop-nav {
    display: none;
  }

  .mobile-nav {
    display: block;
  }

  #header-logo {
    height: 29px;
  }

  #contact-us-home-section {
    position: relative;
    .contact-us-gmap-container {
      display: none;
    }
    .contact-content {
      position: absolute;
      top: 47%;
      width: 100%;
      left: 0;
      .contact-header {
        padding: 23px 0 19px 0;
        background: rgba(255, 255, 255, 0.8);
        font-size: 52px;
        margin-left: $left-align-home-mobile;
      }
      .contact-body {
        padding: 0;
        font-size: .95em;
        padding-left: 12px;
        > ul {
          padding-left: 0;
        }
      }
    }
  }
  .small-hidden {
    display: none;
  }

  .contact-us-modal {
    width: 100%;
    height: 100%;
    overflow: scroll;
    .inner {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      margin-top: 0;
      .form {
        margin: 0;
        > p {
          padding-top: 20px;
          font-size: 1.8em;
        }
      }
    }
  }

  .services-modal-content {
    height: 100%;
    .service-detail-close {
      @include close-button-small;
      top: 15px;
      right: 15px;
    }
    .header {
      font-size: .8em;
    }
    .content {
      background-color: white;
    }
  }

  .service-detail {
    min-width: 1px;
    width: 100%;
    height: 100%;
    overflow: scroll;
    .inner {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      margin-top: 0;
      .form {
        margin: 0;
        > p {
          padding-top: 20px;
          font-size: 1.8em;
        }
      }
    }
  }

  .home-intro-left {
    display: inline-block;
    width: 100%;
    > div {
      padding: 80px 20px 0 20px;
    }
  }

  .home-intro-right {
    display: none;
  }

  .services-info {
    width: 100%;
    .services-content {
      margin-left: 0;
    }
  }

  .services-row {
    display: block;
    .services-text {
      width: 100%;
      padding-left: $left-align-home-mobile;
    }
  }

  .services-img {
    display: none;
  }

  .property-preview {
    width: 90%;
  }

  #header-home {
   height: 80vh;
  }

  .home-intro {
    width: 80%;
    margin-top: 0;
    > div {
      padding: 10px;
    }
  }

  .nav {
    > li {
      display: block;
    }
  }

  #listings-sidebar {
    width: 90%;
  }

  #listings-info {
    width: 90%;
  }

  .ham-menu {
    height: 2em;
    width: 2em;
  }

  .services-info {
    width: 100%;
  }

  #contact-us {
    background-color: white;
    background-image: none;
    height: 340px;
    .contact-content {
      width: 100%;
      top: 0;
      left: 0;
      .contact-header {
        text-align: center;
      }
      .contact-body {
        padding: 0;
        > ul {
          padding-left: 20px;
        }
      }
    }
  }
  .footer {
    background: $primary-color;
    padding: 0;
    padding: $left-align-home-mobile 0 0 $left-align-home-mobile;
    color: white;
    .inner {
      margin-left: 0;
      padding-left: 0;
    }
    & > * {
      line-height: 2.2;
    }
    .column {
      display: inline-block;
      width: 43%;
      margin-right: 6%;
      margin-bottom: 10px;
      .title {
        font-weight: bold;
      }
      margin-left: 0%;
      opacity: .9;
      &.copyright {
        margin-top: 10%;
        margin-bottom: 0;
        width: 100%;
      }
      &.social {
        margin: 25px 0 0 -9px;
        display: block;
        float: left;
        > a {
          float: left;
          padding-right: 12px;
        }
      }
      a {
        text-decoration: none;
        color: inherit;
        display: block;
        img {
          color: white;
          width: 1em;
        }
      }
    }
  }
}
/**
 *  Do not remove the comment below. It's the markers used by gulp-inject to inject
 *  all your sass files automatically
 */
// injector
// endinjector

